    * Removed comment controls for users.
    * Removed display order settings for comment module. Comment display
      order can now be customised using the Views module.
    * Added more features to the default install profile, and a new
      slimmed down install profile for developers.
    * Image toolkits are added by modules instead of being copied to
      the includes directory.
- Search:
    * Added support for language-aware searches.
- Testing:
    * Added test framework and tests.
- Removed ping module:
    * Contributed modules with similar functionality are available.
- Refactored the "access rules" component of user module:
    * The user module now provides a simple interface for blocking single
      IP addresses. Previous user module functionality for restricting certain
      e-mail addresses and usernames are available as a contributed module.
      Further, IP address range blocking is no longer supported and should be
      implemented at the operating system level.
- Removed throttle module:
    * Alternative methods for improving performance are available in other core and
      contributed modules.
- Added code registry:
    * Modules now declare their includable files via their .info file.  That
      allows Drupal to scan files when a module is enabled and then lazy-load
      code as needed, resulting in significant performance and memory improvements.
- Theme system:
    * Converted the 'bluemarine' theme to a tableless layout.

Drupal 6.0, 2008-02-13
----------------------
- New, faster and better menu system.
- New watchdog as a hook functionality.
   * New hook_watchdog that can be implemented by any module to route log
     messages to various destinations.
   * Expands the severity levels from 3 (Error, Warning, Notice) to the 8
     levels defined in RFC 3164.
   * The watchdog module is now called dblog, and is optional, but enabled by
     default in the default install profile.